<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@android:color/darker_gray"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent">
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="95dip">
    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/station_name_background">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:textSize="36sp"
        android:text="@string/msg_hourly_news_title"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginBottom="10dip"
        android:textSize="18sp"
        android:text="@string/msg_hourly_news_subtitle"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginBottom="10dip"
        android:textSize="12sp"
        android:text="@string/msg_hourly_news_heading"/>
      <TextView
        android:id="@+id/HourlyPubDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="10dip"/>
      <TextView
        android:id="@+id/HourlyDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginBottom="10dip"
        android:textSize="12sp"/>
    </LinearLayout>
    <Button
      android:id="@+id/HourlyListenNowButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_margin="15dip"
      android:gravity="center"
      android:drawableLeft="@drawable/speaker_icon"
      android:text="@string/msg_listen_now"
      android:background="@drawable/story_button_background"/>
  </LinearLayout>
</ScrollView>