<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/list_background"
  android:paddingTop="5dip"
  android:paddingLeft="5dip"
  android:paddingRight="5dip">
  <LinearLayout
    android:id="@+id/NewsStoryLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/NewsStoryIndex"
      android:gravity="right"
      android:layout_alignParentRight="true"
      style="@style/NewsStoryIndex"/>
    <TextView
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/NewsStoryTitleText"
      android:textAppearance="@style/NewsItemTitle"
      android:layout_gravity="center_vertical"
    />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/NewsStoryByline"
      android:textAppearance="@style/NewsStorySubtext"/>
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/NewsStoryDateline"
      android:textAppearance="@style/NewsStorySubtext"/>
    <LinearLayout
      android:id="@+id/NewsStoryRow02"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:paddingTop="10dip"
      android:paddingBottom="10dip"
      android:gravity="center">
      <Button
        android:id="@+id/NewsStoryShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/share"
        android:text="@string/msg_share"
        android:background="@drawable/story_button_background"/>
      <Button
        android:id="@+id/NewsStoryListenNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/speaker_icon"
        android:text="@string/msg_listen_now"
        android:background="@drawable/story_button_background"/>
      <Button
        android:id="@+id/NewsStoryListenEnqueueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableLeft="@drawable/plus"
        android:text="@string/msg_listen_later"
        android:background="@drawable/story_button_background"/>
    </LinearLayout>
    <FrameLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <WebView
        android:id="@+id/NewsStoryWebView"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
      </WebView>
    </FrameLayout>
  </LinearLayout>
</ScrollView>